Fixed a bug that prevented image of pub displaying correctly on mobile. Still needs adjustment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,9 +166,8 @@ h1, h2, h3 {
 }
 
 #circle-container {
-    width: 40rem;
-    height: 40rem;
-
+    width: 40em;
+    height: 40em;
     padding:30px;
 
     background-color: white;
@@ -266,3 +265,19 @@ footer {
 
 
 /* ---- MEDIA QUERIES ---- */
+
+@media(max-width: 992px) {
+    #circle-container {
+    width: 20em;
+    height: 20em;
+    padding:30px;
+    margin-left: 0;
+
+    background-color: white;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+}
